2016-01-18  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2016-01-18  Nick Clifton  <nickc@redhat.com>

	* testsuite/ld-plugin/plugin.exp: Skip plugin tests if the linker
	is not configured to support plugins.

2016-01-17  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2016-01-17  Alan Modra  <amodra@gmail.com>

	* testsuite/lib/ld-lib.exp (check_shared_lib_support): Exclude xgate.
	* testsuite/ld-elf/endsym.d: xfail m68hc11/12 and xgate.
	* testsuite/ld-elf/pr14156a.d: Likewise.
	* testsuite/ld-elf/pr14926.d: Don't run for m68hc11/12 and xgate.
	* testsuite/ld-elf/sec64k.exp: Likewise.

2016-01-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* testsuite/ld-arm/arm-elf.exp (Thumb-Thumb farcall v6-M (no profile)):
	Set address of .foo section when linking.
	* testsuite/ld-arm/farcall-thumb-thumb-m-no-profile-b.s: Place myfunc
	in .foo section.
	* testsuite/ld-arm/farcall-thumb-thumb-m-no-profile.d: Adapt expected
	output to the above changes.

2016-01-13  Nick Clifton  <nickc@redhat.com>

	* testsuite/ld-elf/elf.exp (-Bymsolic-functions): Expect to fail
	for MIPS targets.

	* testsuite/ld-scripts/script.exp (extract_symbol_test): Expect to
	fail for MIPS targets.

	* testsuite/ld-scripts/rgn-at11.d: Expect this test to fail for
	MIPS targets.

2016-01-12  Yury Usishchev  <y.usishchev@samsung.com>

	* testsuite/ld-arm/arm-elf.exp: New test.
	* testsuite/ld-arm/unwind-mix.d: New file.
	* testsuite/ld-arm/unwind-mix1.s: New file.
	* testsuite/ld-arm/unwind-mix2.s: New file.

2016-01-08  Jiong Wang  <jiong.wang@arm.com>

	PR ld/19368
	* testsuite/ld-arm/ifunc-3.rd: Update expected result.
	* testsuite/ld-arm/ifunc-4.rd: Likewise.
	* testsuite/ld-arm/ifunc-9.rd: Likewise.
	* testsuite/ld-arm/ifunc-10.rd: Likewise.
	* testsuite/ld-arm/ifunc-12.rd: Likewise.
	* testsuite/ld-arm/ifunc-13.rd: Likewise.

2016-01-05  Nick Clifton  <nickc@redhat.com>

	* emulparams/msp430elf.sh (RAM_START): Move to 0x500 - above the