@@ -1,0 +1,10 @@
+ .text
+ .zero 16
+
+ .section .tbss,"awT",%nobits
+ .p2align 8
+ .zero 16
+
+ .data
+ .p2align 4
+ .long 0
